force-app/main/default/objects/VS_OpportunityItem__c/VS_OpportunityItem__c.object-meta.xml
<CustomObject>
    <description>영업기회에서 사용 가능 한 아이템 정보를 관리하는 Obj</description>
    <label>Opportunity Item</label>
    <nameField>
        <displayFormat>OP-{000000000}</displayFormat>
        <label>Opportunity Product Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Opportunity Items</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>