force-app/main/default/objects/VS_OpportunityItem__c/fields/isAgreed__c.field-meta.xml
<CustomField>
    <fullName>isAgreed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isAgreed</label>
    <type>Checkbox</type>
</CustomField>