force-app/main/default/objects/VS_OpportunityItem__c/fields/l_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>l_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Opportunity Items</relationshipLabel>
    <relationshipName>Opportunity_Items</relationshipName>
    <type>Lookup</type>
</CustomField>