force-app/main/default/objects/VS_OpportunityItem__c/fields/l_Product__c.field-meta.xml
<CustomField>
    <fullName>l_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Opportunity Items</relationshipLabel>
    <relationshipName>Opportunity_Items</relationshipName>
    <type>Lookup</type>
</CustomField>